# besinveri

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  SECURITY_REPORT_TR.md  config.toml  config.yml
.github/workflows/: ci.yml
db/foods/: fruits.json  staple.json  vegetables.json
migrations/foods/: 20250907171003_create_foods.sql  20250907171021_create_food_tags.sql  20250907171026_create_food_servings.sql  20250907171032_create_food_allergens.sql  20250907175114_create_allergens.sql  20250907175125_create_tags.sql  20250907201158_create_serving_descriptions.sql  20250907202033_create_food_sources.sql  20250907202228_create_food_images.sql
res/foods/: fruits.json  vegetables.json
scripts/: test_endpoints.py  test_security.py  test_stress.py
src/: main.rs
src/api/: cache.rs  database.rs  database_o.rs  endpoints.rs  error.rs  foods.rs  health.rs  mod.rs  search.rs  security.rs  status.rs
src/core/: config.rs  food.rs  mod.rs  str.rs
