[package]
name = "besinveri"
version = "0.1.0"
authors = ["Karahan Buhan"]
edition = "2024"
description = "Türkiye'deki gıdaların kalori, makro, mineral ve vitamin değerlerini sunan açık ve ücretsiz bir API."
readme = "README.md"
homepage = "https://besinveri.com"
repository = "https://github.com/karahanbuhan/besinveri"
license = "MIT"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.47.1", features = ["full"] }
