[package]
name = "besinveri"
version = "0.1.0"
authors = ["Karahan Buhan"]
edition = "2024"
description = "Türkiye'deki gıdaların kalori, makro, mineral ve vitamin değerlerini sunan açık ve ücretsiz bir API."
readme = "README.md"
homepage = "https://besinveri.com"
repository = "https://github.com/karahanbuhan/besinveri"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.6"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "time"] }
