[package]
name = "besinveri-api"
version = "0.1.0"
authors = ["Karahan Buhan"]
edition = "2024"
description = "Türkiye'deki gıdaların kalori, makro, mineral ve vitamin değerlerini sunan açık ve ücretsiz bir API."
readme = "README.md"
homepage = "https://api.besinveri.com"
repository = "https://github.com/karahanbuhan/besinveri-api"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
axum-governor = "1.0.2"
axum-helmet = "0.2.0"
chrono = "0.4.42"
helmet-core = "0.2.0"
lazy-limit = "1.0.1"
moka = { version = "0.12.11", features = ["future"] }
real = { version = "0.1.4", features = ["axum"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path", "set-header", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "time"] }
